--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -18,26 +18,32 @@ jobs:
     - name: Setup Go
       uses: actions/setup-go@v4
       with:
-        go-version: '1.22'
+        go-version: '1.24'
         # This enables caching for the Go module cache (GOMODCACHE)
         cache: true
         cache-dependency-path: go.sum
 
-    # Step 3: Cache installed tools
+    # Step 3: Cache Go module downloads (REPLACES the broad cache)
+    - name: Cache Go Modules
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.cache/go-build
+          ~/go/pkg/mod
+        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        restore-keys: |
+          ${{ runner.os }}-go-
+
+    # Step 4: Cache installed tools specifically
     - name: Cache Go Tools
       uses: actions/cache@v3
       id: tools-cache
       with:
-        path: |
-          ~/go/bin
-          ~/go/pkg/mod
-        # A static key for the tools we want to install.
-        # This cache will be invalidated if the key (the tool versions) changes.
-        key: ${{ runner.os }}-go-tools-v1-${{ hashFiles('**/go.mod') }}
+        path: ~/go/bin
+        key: ${{ runner.os }}-go-tools-${{ hashFiles('**/go.sum') }}
 
-    # Step 4: Install the necessary tools ONLY if not cached
+    # Step 5: Install the necessary tools ONLY if not cached
     - name: Install tools
-      # Run this step only if the cache did NOT hit (if it hit, the tools are already in ~/go/bin)
       if: steps.tools-cache.outputs.cache-hit != 'true'
       run: |
         go install mvdan.cc/gofumpt@latest
@@ -48,21 +54,17 @@ jobs:
       run: |
         # Check if any Go files exist first
         if find . -name '*.go' -not -path './vendor/*' | read; then
-          # Create a backup of the current state to check for changes later
-          git stash -u
-
           # Run the formatter
           make fmt
-
-          # Check if the formatter changed any files by comparing to the stashed state
-          if ! git diff --exit-code --staged; then
+          
+          # Check if any files were modified by the formatter
+          if ! git diff --exit-code; then
             echo "❌ Code formatting issues found. Please run 'make fmt' locally and commit the changes."
-            git diff
+            echo "The following files need formatting:"
+            git diff --name-only
+            git diff  # Show the actual changes for context
             exit 1
           fi
-
-          # Restore the original state if no changes were made
-          git stash pop
         else
           echo "No Go files found, skipping formatting check."
         fi
