fix(m0): included the branch name or workflow context in the cache key to isolate caches between different branches/PRs.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,15 +23,16 @@ jobs:
         cache: true
         cache-dependency-path: go.sum
 
-    # Step 3: Cache Go module downloads (REPLACES the broad cache)
+    # Step 3: Cache Go module downloads
     - name: Cache Go Modules
       uses: actions/cache@v3
       with:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
+          ${{ runner.os }}-go-${{ github.ref }}-
           ${{ runner.os }}-go-
 
     # Step 4: Cache installed tools specifically
@@ -40,7 +41,7 @@ jobs:
       id: tools-cache
       with:
         path: ~/go/bin
-        key: ${{ runner.os }}-go-tools-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-tools-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
 
     # Step 5: Install the necessary tools ONLY if not cached
     - name: Install tools
