--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -23,25 +23,25 @@ jobs:
         cache: true
         cache-dependency-path: go.sum
 
-    # Step 3: Cache Go module downloads
+    # Step 3: Cache Go module downloads - USING FRESH KEY
     - name: Cache Go Modules
       uses: actions/cache@v3
       with:
         path: |
           ~/.cache/go-build
           ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-FRESH-START-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
         restore-keys: |
-          ${{ runner.os }}-go-${{ github.ref }}-
-          ${{ runner.os }}-go-
+          ${{ runner.os }}-go-FRESH-START-${{ github.ref }}-
+          ${{ runner.os }}-go-FRESH-START-
 
-    # Step 4: Cache installed tools specifically
+    # Step 4: Cache installed tools - USING FRESH KEY
     - name: Cache Go Tools
       uses: actions/cache@v3
       id: tools-cache
       with:
         path: ~/go/bin
-        key: ${{ runner.os }}-go-tools-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
+        key: ${{ runner.os }}-go-tools-FRESH-START-${{ github.ref }}-${{ hashFiles('**/go.sum') }}
 
     # Step 5: Install the necessary tools ONLY if not cached
     - name: Install tools
