ci(m1): added the milestone branch to the push CI part, to make sure it also passes the CI tests

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go CI
 
 on:
   push:
-    branches: [ "dev", "feat/setup" ]
+    branches: [ "dev", "feat/setup", "feat/mvp" ]
   pull_request:
     branches: [ "dev" ]
 
