--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,7 +2,7 @@ name: Go CI
 
 on:
   push:
-    branches: [ "dev", "feat/setup", "feat/mvp", "feat/storage-engine" ]
+    branches: [ "dev", "feat/setup", "feat/mvp", "feat/storage-engine", "feat/concurrency" ]
   pull_request:
     branches: [ "dev" ]
 
